# simcord

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  parity-gap.md
.github/workflows/: ci.yml  docs.yml  dpy-master.yml  release.yml
benchmarks/: _helpers.py  test_dispatch_benchmarks.py  test_perf_guards.py
changes/: +advance-time.feature.md  +backend-owns-mutations.misc.md  +bulk-delete.feature.md  +clear-reactions.feature.md  +common-bot-sweep.feature.md  +deferred-component-update.bugfix.md  +deterministic-clocks.bugfix.md  +dm-bot-and-ephemeral.bugfix.md  +enum-centralisation.misc.md  +error-notes.misc.md  +errors-fail-by-default.feature.md  +examples-cookbook.doc.md  +failure-transcript.feature.md  +forum-posts.feature.md  +guild-edit.feature.md  +honest-body-fields.bugfix.md  +honest-create-fields.feature.md  +honesty-fuzzing.feature.md  +intents.feature.md  +interaction-ack-after-validation.bugfix.md  +loud-unimplemented-routes.bugfix.md  +out-of-scope-parity.misc.md  +parity-autogen.misc.md  +performance-baseline.feature.md  +permission-parity.bugfix.md  +production-stable.misc.md  +python-311.misc.md  +raise-errors.feature.md  +runtime-channels.feature.md  +seo.doc.md  +settle-async-sleep.bugfix.md  +social-image.doc.md  +stability-doc.doc.md  +sticker-create-multipart.bugfix.md  +terminal-demo.doc.md  +tier1-self-and-ordering.feature.md  +typed-interaction-model.misc.md  +verified-parity.feature.md  +webhook-crud.feature.md  +workflow-hardening.misc.md  (+13 more)
docs/: api.md  architecture.md  changelog.md  concepts.md  cookbook.md  faq.md  index.md  installation.md  llms.txt  migrating-from-dpytest.md  parity-matrix.md  performance.md  quickstart.md  robots.txt  stability.md
docs/guides/: ai-coding-agents.md  components.md  diagnostics.md  fixtures.md  intents.md  interactions.md  messages.md  mocks-vs-simulation.md  moderation-and-guild.md  permissions.md  test-without-token.md  testing-discord-py-bots.md  testing-slash-commands.md  threads-reactions-dms.md  time-control.md
examples/: README.md  bot.py  conftest.py  test_bot.py
overrides/: main.html
scripts/: check_discoverability.py
src/discord_py_test/: __init__.py  actors.py  builders.py  env.py  interactions.py  parity.py  pytest_plugin.py  results.py
src/discord_py_test/backend/: errors.py  permissions.py  state.py
src/discord_py_test/backend/models/: __init__.py  interaction.py
src/discord_py_test/http/: router.py
src/discord_py_test/http/routes/: application.py  interactions.py  messages.py  reactions.py
src/simcord/: __init__.py  _dpy_internals.py  actors.py  asserts.py  builders.py  enums.py  env.py  gateway.py  intents.py  interactions.py  parity.py  pytest_plugin.py
src/simcord/backend/: __init__.py  cdn.py  errors.py  serializers.py  state.py
src/simcord/backend/models/: __init__.py  auditlog.py  automod.py  channel.py  expression.py  guild.py  invite.py  member.py  message.py  role.py  scheduled_event.py  user.py  voice.py  webhook.py
src/simcord/backend/ops/: base.py  channels.py  guilds.py  messages.py  permissions.py  webhooks.py
src/simcord/http/: __init__.py  _helpers.py  client.py  router.py
src/simcord/http/routes/: __init__.py  application.py  auditlogs.py  automod.py  channels.py  commands.py  expressions.py  guilds.py  interactions.py  invites.py  messages.py  reactions.py  scheduled_events.py  stage_instances.py
tests/: conftest.py  test_app_commands.py  test_channels.py  test_diagnostics.py  test_interactions.py  test_members.py
tests/conformance/: _world.py  test_field_honesty.py  test_field_honesty_fuzz.py  test_route_coverage.py  test_serializers.py
tests/fixtures/sample_bot/: events.py  general.py  interactions.py  moderation.py
tests/integration/: test_app_commands.py  test_application_emojis.py  test_audit_logs.py  test_automod.py  test_bot_users_and_webhooks.py  test_channels.py  test_common_bot_sweep.py  test_coverage_sweep.py  test_diagnostics.py  test_edge_cases.py  test_error_capture_and_edits.py  test_expressions.py  test_forum.py  test_gateway_and_automod_exempt.py  test_guilds.py  test_intents.py  test_interaction_followups.py  test_interactions.py  test_invites.py  test_lifecycle.py  test_members.py  test_message_routes.py  test_messages.py  test_misc_branches.py  test_moderation.py  test_polls.py  test_reactions.py  test_roles_and_ordering.py  test_scheduled_events.py  test_sharding.py  test_stage_instances.py  test_threads.py  test_time.py  test_transport_edges.py  test_voice_state.py  test_world_helpers.py
tests/unit/: test_assert_helpers.py  test_backend_lookup_errors.py  test_errors.py  test_intent_rules.py  test_parity.py  test_parity_tooling.py  test_permission_validators.py  test_permissions.py  test_pytest_plugin.py  test_router.py
