[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simcord"
version = "1.2.1"
description = "Offline discord.py bot testing with pytest. No network, token, or test server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "SilentHacks" }]
keywords = ["discord", "discord.py", "discord bot testing", "pytest", "bot testing", "integration testing", "discord simulator", "slash commands", "AI coding agents", "offline testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Typing :: Typed",
]
dependencies = ["discord.py>=2.7,<3"]

[project.optional-dependencies]
pytest = ["pytest>=8", "pytest-asyncio>=0.24"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4",
    "coverage[toml]>=7",
    "hypothesis>=6",
    "ruff>=0.8",
    "pyright>=1.1",
    "towncrier>=24",
    "pre-commit>=3",
]
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.26"]
# Just the performance suite, for the dedicated CI benchmark job (no lint/type
# tooling). pytest-asyncio is included so the shared `asyncio_mode` ini option is
# recognised (it is unused by the sync benchmarks, but its absence would warn
# and break under strict-warnings). The full `dev` extra includes all of this too.
bench = ["pytest>=8", "pytest-benchmark>=4", "pytest-asyncio>=0.24"]

[project.entry-points.pytest11]
simcord = "simcord.pytest_plugin"

[project.urls]
Homepage = "https://github.com/SilentHacks/simcord"
Documentation = "https://simcord.readthedocs.io/"
Issues = "https://github.com/SilentHacks/simcord/issues"
Changelog = "https://github.com/SilentHacks/simcord/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/simcord"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Make the sibling test-support modules (tests/conformance/_world.py,
# benchmarks/_helpers.py) importable explicitly, rather than relying on pytest's
# implicit rootdir sys.path insertion, which a stray __init__.py would silently
# break. Entries resolve from the rootdir, so they hold for `pytest benchmarks` too.
pythonpath = ["tests/conformance", "benchmarks"]

[tool.coverage.run]
source = ["simcord"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise AssertionError"]
# Ratchet: raise as coverage improves, never lower. Hit the 1.0 target of 95%.
fail_under = 95

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC", "RUF"]
ignore = [
    "E501",  # line length is advisory; the formatter handles it
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B008"]  # discord.py decorators encourage call-in-default patterns

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportPrivateUsage = false

[tool.towncrier]
package = "simcord"
directory = "changes"
filename = "CHANGELOG.md"
underlines = ["", "", ""]
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/SilentHacks/simcord/issues/{issue})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true
